--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -2,17 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Snackbar</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <nav>
       <ul>
-        <li class="link-title"><a href="./1-timer.html">Timer</a></li>
-        <li class="link-title"><a href="./2-snackbar.html">Snackbar</a></li>
+        <li>
+          <a class="link-title" href="./index.html">Back</a>
+        </li>
       </ul>
     </nav>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
