--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timer</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/1-timer.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <link
       rel="stylesheet"
       type="text/css"
